continued implementation of order service
